package app.controllers;

public class AdminController
{
}
