package app.controllers;

public class UserController
{
}
