package app.persistence;

import app.entities.Bottom;
import java.util.List;

public class BottomMapper
{
    private ConnectionPool connectionPool;

    public List<Bottom> getAllBottoms()
    {
        return null;
    }

    public Bottom getBottomById(int bottomId)
    {
        return null;
    }

    public Bottom createBottom(Bottom bottom)
    {
        return null;
    }

    public boolean updateBottom(Bottom bottom)
    {
        return false;
    }

    public boolean delete(int bottomId)
    {
        return false;
    }
}
