package app.services;

public class OrderServiceImpl implements OrderService
{
}
