package app.services;

public class ShoppingServiceImpl implements ShoppingService
{
}
