package app.services;

public class UserServiceImpl implements UserService
{
}
